# Home_Automation

./: .gitignore
.embedder/: bootstrap-context-prod.enc
.embedder/svd-cache/: ESP32.json
FW/: flash.bat  flash.py  flash.sh
home_automation/: CMakeLists.txt  partitions.csv  release.py  sdkconfig  sdkconfig.old
home_automation/.cache/clangd/index/: esp_websocket_client.c.FA4B4839EFFB5AE0.idx  esp_websocket_client.h.4B27A2D3E7BDA4C5.idx  home_automation.c.5DE2225BCEB33C88.idx  main.c.945EE821E793099E.idx  main.h.EC5D480F9701D39D.idx  provisioning.c.D1D8123DB976C425.idx  provisioning.h.0808EF1E5E488A12.idx  rc_gpio.c.2EC5EC9A991F137C.idx  rc_gpio.h.4F1F243C65EF5AB5.idx  supabase.c.80F30935ECFD241C.idx  supabase.h.011CC97AB3C32D55.idx  utils.c.51B47FAE16C07589.idx  utils.h.4BA7D3D518FED930.idx  wifi.c.6C5C37AE5FBDFE64.idx  wifi.h.834ABBC83F15E4DB.idx
home_automation/.embedder/: bootstrap-context-prod.enc  workspace-selection-prod.json
home_automation/.embedder/svd-cache/: index.json
home_automation/main/: CMakeLists.txt
home_automation/main/inc/: main.h  provisioning.h  rc_gpio.h  supabase.h  utils.h  wifi.h
home_automation/main/src/: home_automation.c  main.c  provisioning.c  rc_gpio.c  supabase.c  utils.c  wifi.c
